@@ -1,3 +1,8 @@
+2003-11-22  Andrew Cagney  <cagney@redhat.com>
+
+	* lib/gdb.exp (gdb_test_multiple): Add simple example.
+	* gdb.base/structs.exp: Use gdb_test_multiple.
+
 2003-11-20  Andrew Cagney  <cagney@redhat.com>
 
 	* gdb.base/structs.exp: Handle and recover from internal errors.
